3.3.0 (2017-XX-XX)
------------------

New features
 - [core] can now invite attendees to exceptions only (#2561)

Enhancements
 -

Bug fixes
 -

3.2.10 (2017-07-05)
-------------------

New features
 - [web] new images viewer in Mail module
 - [web] create list from selected cards (#3561)
 - [eas] initial EAS v16 and email drafts support
 - [core] load-testing scripts to evaluate SOGo performance

Enhancements
 - [core] now possible to {un}subscribe to folders using sogo-tool
 - [web] AngularJS optimizations in Mail module
 - [web] AngularJS optimization of color picker
 - [web] improve display of tasks status
 - [web] added custom fields support from Thunderbird's address book
 - [web] added Latvian (lv) translation - thanks to Juris Balandis
 - [web] expose user's defaults and settings inline
 - [web] can now discard incoming mails during vacation
 - [web] support both backspace and delete keys in Mail and Contacts modules
 - [web] improved display of appointment/task comments and card notes
 - [web] updated Angular Material to version 1.1.4
 - [web] updated CKEditor to version 4.7.1

Bug fixes
 - [web] respect SOGoLanguage and SOGoSupportedLanguages (#4169)
 - [web] fixed adding list members with multiple email addresses
 - [web] fixed responsive condition of login page (960px to 1023px)
 - [web] don't throw errors when accessing nonexistent special mailboxes (#4177)
 - [core] newly subscribed calendars are excluded from freebusy (#3354)
 - [core] don't update subscriptions when owner is not the active user (#3988)
 - [core] strip cr during LDIF import process (#4172)
 - [core] email alarms are sent too many times (#4100)
 - [core] enable S/MIME even when using GNU TLS (#4201)
 - [core] silence verbose output for sogo-ealarms-notify (#4170)
 - [eas] don't include task folders if we hide them in SOGo (#4164)

3.2.9 (2017-05-09)
------------------

New features
 - [core] email alarms now have pretty formatting (#805)

Enhancements