@@ -16,6 +16,21 @@
       <md-list-item>
         <div class="md-tile-left"><!-- empty --></div>
       </md-list-item>
+      <!-- organizer -->
+      <md-list-item>
+        <div class="md-button md-icon-button">
+          <md-icon>person</md-icon>
+        </div>
+        <sg-avatar-image class="md-avatar"
+                         sg-email="editor.component.organizer.email"
+                         size="40">person</sg-avatar-image>
+        <div class="sg-tile-content">
+          <div class="sg-md-subhead"><div>{{editor.component.organizer.name}}</div></div>
+          <div class="sg-md-body"><div>{{editor.component.organizer.email}}</div></div>
+        </div>
+        <md-divider><!-- divider --></md-divider>
+      </md-list-item>
+      <!-- attendees -->
       <md-list-item ng-repeat="currentAttendee in editor.component.attendees track by currentAttendee.email">
         <md-button class="md-icon-button"
                    label:aria-label="Delete"
@@ -35,6 +50,7 @@
     <!-- freebusy -->
     <md-list class="day"
              ng-repeat="day in editor.attendeesEditor.days">
+      <!-- timeline -->
       <md-list-item layout-align="start end">
         <div layout="column" layout-align="end start">
           <div>{{day.stringWithSeparator}}</div>
@@ -43,6 +59,27 @@
           </div>
         </div>
       </md-list-item>
+      <!-- organizer freebusy -->
+      <md-list-item>
+        <div class="hour"
+             ng-class="{'sg-no-freebusy': !editor.component.organizer.uid}"
+             ng-repeat="hour in ::editor.attendeesEditor.hours">
+          <div class="quarter" ng-class="{event: editor.component.coversFreeBusy(day.getDayString, hour, 0)}">
+            <div class="busy" ng-show="editor.component.organizer.freebusy[day.getDayString][hour][0]"><!-- 15 minutes --></div>
+          </div>
+          <div class="quarter" ng-class="{event: editor.component.coversFreeBusy(day.getDayString, hour, 1)}">
+            <div class="busy" ng-show="editor.component.organizer.freebusy[day.getDayString][hour][1]"><!-- 15 minutes --></div>
+          </div>
+          <div class="quarter" ng-class="{event: editor.component.coversFreeBusy(day.getDayString, hour, 2)}">
+            <div class="busy" ng-show="editor.component.organizer.freebusy[day.getDayString][hour][2]"><!-- 15 minutes --></div>
+          </div>
+          <div class="quarter" ng-class="{event: editor.component.coversFreeBusy(day.getDayString, hour, 3)}">
+            <div class="busy" ng-show="editor.component.organizer.freebusy[day.getDayString][hour][3]"><!-- 15 minutes --></div>
+          </div>
+        </div>
+        <md-divider><!-- divider --></md-divider>
+      </md-list-item>
+      <!-- attendees freebusy -->
       <md-list-item ng-repeat="currentAttendee in editor.component.attendees track by currentAttendee.email">
         <div class="hour"
              ng-class="{'sg-no-freebusy': !currentAttendee.uid}"
